Clean up bug attempt in fixing gap

--- a/public/gallery.scss
+++ b/public/gallery.scss
@@ -70,7 +70,6 @@
 
 #gallery3 {
     display:flex; 
-    column-count: 2;
     gap: 50px;
     animation: fadeIn 0.5s ease-in-out;
 
@@ -146,7 +145,7 @@
     }
 
     a {
-        width: auto;
+        width: 100%;
         text-align: center;
         border-radius: 15px;
         background-color: var(--maincolor);
